Test if instafeed works

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,18 @@
         {{ content }}
     </div>
 
+    <!-- <script src="/assets/js/fun.js"></script> -->
+
+    <!-- <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
+
+    <script type="text/javascript">
+        var feed = new Instafeed({
+            get: 'tagged',
+            // tagName: 'имбирныепряники',
+            clientId: '05a195ca08a44c049cc275636bf1be83'
+        });
+        feed.run();
+    </script> -->
 </body>
 
 </html>
