--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
 	<div class="post__back">
-    	<a href='{{ "/" | prepend: site.github.url }}'>&lt;-- home</a>
+    	<a href='{{ "/blog" | prepend: site.github.url }}'>&lt;-- blog</a>
     </div>
     <div class="post__title">
     	<h1>{{ page.title }}</h1>
