--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -181,6 +181,7 @@ ul {
 		img {
 			margin-top: 10px;
 			margin-bottom: 10px;
+			width: 100%;
 			@media screen and (max-width: $br) {
 				width: 100%;
 				margin: auto;
